gateway-api-ingress/03-http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ml-ops-route
  namespace: ml-ops
spec:
  parentRefs:
    - name: eg
      namespace: ml-ops
  hostnames:
    - "example.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /predict
      backendRefs:
        - name: intent-classifier
          port: 80
